fix: correct styling on mobile for profile page

--- a/styles/_user-profiles.scss
+++ b/styles/_user-profiles.scss
@@ -24,8 +24,7 @@
 }
 
 .profile-avatar {
-  display:none; 
-  /* position: relative;
+  position: relative;
   line-height: 0;
   align-self: center;
   margin-right: 10px;
@@ -33,7 +32,7 @@
   [dir="rtl"] & {
     margin-left: 10px;
     margin-right: 0;
-  } */
+  }
 }
 
 .profile-avatar .user-avatar {
